# ok-haskell

./: .gitignore  .ok  LICENSE  README.md  ok-haskell.cabal  ok.fish  stack.yaml
src/: Ok.hs
tests/: test.hs
