name:                ok-haskell
version:             0.0.0.1
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/ok-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Hansen
--maintainer:          example@example.com
copyright:           2019 Nick Hansen
category:            Console
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ok
  hs-source-dirs:      src
  main-is:             Ok.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , turtle