name:                ok-haskell
version:             0.0.0.1
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/ok-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Nick Hansen
-- maintainer:          example@example.com
copyright:           2019 Nick Hansen
category:            Console
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ok
  hs-source-dirs:      src
  main-is:             Ok.hs
  ghc-options:         -main-is Ok.main
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath >= 1.4.2.1
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , shelly
                     , split
                     , text

library
  hs-source-dirs:      src
  exposed-modules:     Ok
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath >= 1.4.2.1
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , shelly
                     , split
                     , text

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath >= 1.4.2.1
                     , ok-haskell
                     , tasty >= 0.7
                     , tasty-hunit
                     , text
